--- a/source/theme.yaml
+++ b/source/theme.yaml
@@ -1,8 +1,8 @@
-ThemeApiVersion: 2.8.0
+﻿ThemeApiVersion: 2.8.0
 Id: 8b15c46a-90c2-4fe5-9ebb-1ab25ba7fcb1
 Name: Helium
 Author: darklinkpower
-Version: 1.70
+Version: 1.71
 Links:
 - Name: GitHub
   Url: https://github.com/darklinkpower/Helium
